Fixed scrollbar causing pages to shift

--- a/style/base.css
+++ b/style/base.css
@@ -9,6 +9,10 @@
     position: relative;
 }
 
+html {
+    overflow-y: scroll;
+}
+
 html, body {
     height: 100%;
 }
